--- a/mapbrowser.html
+++ b/mapbrowser.html
@@ -33,8 +33,12 @@ window.onresize = function() {
 };
 
 window.onload = function() {
-    CallVerb("onLoad");
+	setTimeout(load, 100);
 };
+
+function load() {
+    CallVerb("onLoad");
+}
 
 var isfullscreen = 0;
 
