--- a/mapbrowser.html
+++ b/mapbrowser.html
@@ -35,7 +35,7 @@ window.onresize = function() {
 
 window.onload = function() {
 	CallVerb("onLoad");
-	WinSet("","mainvsplit.right","mapwindow","guild.is-visible","false","splitStack.is-visible","false","SpellBook.is-visible","false","Quests.is-visible","false","Auction.is-visible","false","winSettings.is-visible","false","radio_enabled.is-checked","false");
+	WinSet("","mainvsplit.right","mapwindow","guild.is-visible","false","splitStack.is-visible","false","SpellBook.is-visible","false","Quests.is-visible","false","Monsters.is-visible","false","Auction.is-visible","false","winSettings.is-visible","false","radio_enabled.is-checked","false");
 };
 
 var isfullscreen = 0;
