--- a/mapbrowser.html
+++ b/mapbrowser.html
@@ -34,8 +34,6 @@ window.onresize = function() {
 };
 
 window.onload = function() {
-	CallVerb("onLoad");
-	WinSet("","mainvsplit.right","mapwindow","guild.is-visible","false","splitStack.is-visible","false","SpellBook.is-visible","false","Quests.is-visible","false","Monsters.is-visible","false","Auction.is-visible","false","winSettings.is-visible","false","radio_enabled.is-checked","false");
 };
 
 var isfullscreen = 0;
@@ -54,6 +52,11 @@ function ToggleFullscreen() {
 function Login() {
 	WinSet("","mainvsplit.right","rpane","mnu_Settings.command",".ShowSettings","mnu_Settings.is-disabled","false");
 	Resize(1);
+}
+
+function Load() {
+	CallVerb("onLoad");
+	WinSet("","mainvsplit.right","mapwindow","guild.is-visible","false","splitStack.is-visible","false","SpellBook.is-visible","false","Quests.is-visible","false","Monsters.is-visible","false","Auction.is-visible","false","winSettings.is-visible","false","radio_enabled.is-checked","false");
 }
 
 function BackColor() {
