Better chat input

--- a/mapbrowser.html
+++ b/mapbrowser.html
@@ -61,12 +61,12 @@ function Login() {
 
 function BackColor() {
 	var c = encodeURIComponent(arguments[0]);
-	WinSet("","buttonBackColor.background-color",c,"saybutton.background-color",c,"macrobutton.background-color",c,"mainvsplit.background-color",c,"info.background-color",c,"info.tab-background-color",c,"mainwindow.background-color",c,"rpanewindow.background-color",c,"rpane.background-color",c,"textb.background-color",c,"browseb.background-color",c,"infob.background-color",c,"infobubble.labelInfo.background-color",c,"infobubble.labelTitle.background-color",c,"infobubble.background-color",c);
+	WinSet("","buttonBackColor.background-color",c,"buttonChat.background-color",c,"buttonCommand.background-color",c,"buttonOOC.background-color",c,"buttonSay.background-color",c,"mainvsplit.background-color",c,"info.background-color",c,"info.tab-background-color",c,"mainwindow.background-color",c,"rpanewindow.background-color",c,"rpane.background-color",c,"textb.background-color",c,"browseb.background-color",c,"infob.background-color",c,"infobubble.labelInfo.background-color",c,"infobubble.labelTitle.background-color",c,"infobubble.background-color",c);
 }
 
 function ForeColor() {
 	var c = encodeURIComponent(arguments[0]);
-	WinSet("","buttonForeColor.background-color",c,"saybutton.text-color",c,"macrobutton.text-color",c,"mainvsplit.text-color",c,"info.text-color",c,"info.tab-text-color",c,"mainwindow.text-color",c,"rpanewindow.text-color",c,"rpane.text-color",c,"textb.text-color",c,"browseb.text-color",c,"infob.text-color",c,"infobubble.labelInfo.text-color",c,"infobubble.labelTitle.text-color",c);
+	WinSet("","buttonForeColor.background-color",c,"buttonChat.text-color",c,"buttonCommand.text-color",c,"buttonOOC.text-color",c,"buttonSay.text-color",c,"mainvsplit.text-color",c,"info.text-color",c,"info.tab-text-color",c,"mainwindow.text-color",c,"rpanewindow.text-color",c,"rpane.text-color",c,"textb.text-color",c,"browseb.text-color",c,"infob.text-color",c,"infobubble.labelInfo.text-color",c,"infobubble.labelTitle.text-color",c);
 }
 
 var resolution_x;
