--- a/mapbrowser.html
+++ b/mapbrowser.html
@@ -55,19 +55,20 @@ function ToggleFullscreen() {
 }
 
 function Login() {
-	WinSet("","mainvsplit.right","rpane","mnu_Settings.command",".ShowSettings","mnu_Settings.is-disabled","false","mainwindow.mainvsplit.left","mapwindow");
+	var house = encodeURIComponent(arguments[0]);
+	WinSet("","mainvsplit.right","rpane","mnu_Settings.command",".ShowSettings","mnu_Settings.is-disabled","false","mainwindow.mainvsplit.left","mapwindow","buttonHouse.command",".winset \"buttonChat.text=" + house + " input.command=" + house + "-Chat \"");
 	Resize();
 	resizing = 0;
 }
 
 function BackColor() {
 	var c = encodeURIComponent(arguments[0]);
-	WinSet("","buttonBackColor.background-color",c,"buttonChat.background-color",c,"buttonCommand.background-color",c,"buttonOOC.background-color",c,"buttonSay.background-color",c,"mainvsplit.background-color",c,"info.background-color",c,"info.tab-background-color",c,"mainwindow.background-color",c,"rpanewindow.background-color",c,"rpane.background-color",c,"textb.background-color",c,"browseb.background-color",c,"infob.background-color",c,"infobubble.labelInfo.background-color",c,"infobubble.labelTitle.background-color",c,"infobubble.background-color",c,"buttonItems.background-color",c);
+	WinSet("","buttonBackColor.background-color",c,"buttonChat.background-color",c,"buttonCommand.background-color",c,"buttonOOC.background-color",c,"buttonSay.background-color",c,"mainvsplit.background-color",c,"info.background-color",c,"info.tab-background-color",c,"mainwindow.background-color",c,"rpanewindow.background-color",c,"rpane.background-color",c,"textb.background-color",c,"browseb.background-color",c,"infob.background-color",c,"infobubble.labelInfo.background-color",c,"infobubble.labelTitle.background-color",c,"infobubble.background-color",c,"buttonHouse.background-color",c);
 }
 
 function ForeColor() {
 	var c = encodeURIComponent(arguments[0]);
-	WinSet("","buttonForeColor.background-color",c,"buttonChat.text-color",c,"buttonCommand.text-color",c,"buttonOOC.text-color",c,"buttonSay.text-color",c,"mainvsplit.text-color",c,"info.text-color",c,"info.tab-text-color",c,"mainwindow.text-color",c,"rpanewindow.text-color",c,"rpane.text-color",c,"textb.text-color",c,"browseb.text-color",c,"infob.text-color",c,"infobubble.labelInfo.text-color",c,"infobubble.labelTitle.text-color",c,"itemswindow.buttonItems.text-color",c);
+	WinSet("","buttonForeColor.background-color",c,"buttonChat.text-color",c,"buttonCommand.text-color",c,"buttonOOC.text-color",c,"buttonSay.text-color",c,"mainvsplit.text-color",c,"info.text-color",c,"info.tab-text-color",c,"mainwindow.text-color",c,"rpanewindow.text-color",c,"rpane.text-color",c,"textb.text-color",c,"browseb.text-color",c,"infob.text-color",c,"infobubble.labelInfo.text-color",c,"infobubble.labelTitle.text-color",c,"buttonHouse.text-color",c);
 }
 
 var resolution_x;
